--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,11 @@
   </head>
 
   <body>
+  <div class="content">
     <%= yield %>
+  </div>
+  <div class="footer">
+    <%= render 'shared/footer' %>
+  </div>
   </body>
 </html>
