--- a/app/views/questions/new.html.erb
+++ b/app/views/questions/new.html.erb
@@ -1,10 +1,2 @@
-<h1>New Question</h1>
-<p id="notice" style="color:red;"><%= notice %></p>
-<form action="/tests/<%= @test.id %>/questions" method="post">
-  <input name="authenticity_token" value="<%= form_authenticity_token %>" type="hidden">
-  <p>
-    <label for="question-body">Новый вопрос:</label>
-    <input type="text" id="question-body" name="question[body]">
-  </p>
-  <input type="submit" value="Добавить">
-</form>
+<h1><%= question_header('create') %></h1>
+<%= render 'form' %>
